[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/online/JoinMenu.gd" type="Script" id=2]

[node name="JoinMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/offset_right = 2
custom_constants/offset_top = 2
custom_constants/offset_left = 2
script = ExtResource( 2 )

[node name="GridContainer" type="VBoxContainer" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 62.0
offset_bottom = 64.0

[node name="Back" type="Button" parent="GridContainer"]
offset_right = 19.0
offset_bottom = 9.0
size_flags_horizontal = 0
text = "Back"

[node name="Control" type="Control" parent="GridContainer"]
offset_top = 13.0
offset_right = 60.0
offset_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GridContainer/Control"]
offset_right = 60.0
offset_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyContainer" type="VBoxContainer" parent="GridContainer/Control/ScrollContainer"]
offset_right = 59.0
offset_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="Button" type="Button" parent="GridContainer/Control/ScrollContainer/LobbyContainer"]
offset_right = 59.0
offset_bottom = 9.0
text = "Lobby"
align = 0

[node name="Button2" type="Button" parent="GridContainer/Control/ScrollContainer/LobbyContainer"]
offset_top = 10.0
offset_right = 59.0
offset_bottom = 19.0
text = "Xplosive!"
align = 0

[node name="Button3" type="Button" parent="GridContainer/Control/ScrollContainer/LobbyContainer"]
offset_top = 20.0
offset_right = 59.0
offset_bottom = 29.0
text = "Gods play here"
align = 0

[node name="Button4" type="Button" parent="GridContainer/Control/ScrollContainer/LobbyContainer"]
offset_top = 30.0
offset_right = 59.0
offset_bottom = 39.0
text = "Blibb"
align = 0

[node name="Button5" type="Button" parent="GridContainer/Control/ScrollContainer/LobbyContainer"]
offset_top = 40.0
offset_right = 59.0
offset_bottom = 49.0
text = "Blubb"
align = 0

[node name="Button6" type="Button" parent="GridContainer/Control/ScrollContainer/LobbyContainer"]
offset_top = 50.0
offset_right = 59.0
offset_bottom = 59.0
text = "Lobby"
align = 0

[connection signal="pressed" from="GridContainer/Back" to="." method="_on_Back_pressed"]
